// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`00 Link tags with URL: positive examples 1`] = `
Object {
  "buffer": "/**[n] * {@link http://example1.com}[n] * {@link mail:bob@example2.com}[n] * {@link http://example3.com|link text}[n] * {@link http://example4.com|}[n] * {@link http://example5.com|[n] *}[n] */",
  "gaps": Array [],
  "lines": Array [
    "{@link http://example1.com}",
    "{@link mail:bob@example2.com}",
    "{@link http://example3.com|link text}",
    "{@link http://example4.com|}",
    "{@link http://example5.com|",
    "}",
  ],
  "logMessages": Array [],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "LinkTag",
                "nodes": Array [
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "@link",
                    "nodeSpacing": " ",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "http://example1.com",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodeExcerpt": "[n]",
              },
              Object {
                "kind": "LinkTag",
                "nodes": Array [
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "@link",
                    "nodeSpacing": " ",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "mail:bob@example2.com",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodeExcerpt": "[n]",
              },
              Object {
                "kind": "LinkTag",
                "nodes": Array [
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "@link",
                    "nodeSpacing": " ",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "http://example3.com",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "|",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "link text",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodeExcerpt": "[n]",
              },
              Object {
                "kind": "LinkTag",
                "nodes": Array [
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "@link",
                    "nodeSpacing": " ",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "http://example4.com",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "|",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodeExcerpt": "[n]",
              },
              Object {
                "kind": "LinkTag",
                "nodes": Array [
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "@link",
                    "nodeSpacing": " ",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "http://example5.com",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "|",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "[n]",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`00 Link tags with URL: positive examples 2`] = `
Object {
  "buffer": "/**[n] * {@link    mail:bob@example6.com   |  link text }[n] * {@link  [n] *   http://example7.com  [n] *   | [n] *   link text [n] * }[n] */",
  "gaps": Array [],
  "lines": Array [
    "{@link    mail:bob@example6.com   |  link text }",
    "{@link",
    "  http://example7.com",
    "  |",
    "  link text",
    "}",
  ],
  "logMessages": Array [],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "LinkTag",
                "nodes": Array [
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "@link",
                    "nodeSpacing": "    ",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "mail:bob@example6.com",
                    "nodeSpacing": "   ",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "|",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "  link text ",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodeExcerpt": "[n]",
              },
              Object {
                "kind": "LinkTag",
                "nodes": Array [
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "@link",
                    "nodeSpacing": "[n]  ",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "http://example7.com",
                    "nodeSpacing": "[n]  ",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "|",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "[n]  link text[n]",
                  },
                  Object {
                    "kind": "Particle",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
}
`;
